--- a/src/main/webapp/service4.html
+++ b/src/main/webapp/service4.html
@@ -552,7 +552,7 @@
                                 <div class="panel-heading" role="tab" id="trainingHeading1">
                                     <h4 class="panel-title">
                                         <a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="false" aria-controls="trainingCollapse1" class="collapsed">
-                                            架构团队建设
+                                            架构团队
                                         </a>
                                     </h4>
                                 </div>
@@ -565,28 +565,23 @@
                                                 <tr>
 
                                                     <th>服务项</th>
-                                                    <th>内容</th>
 
                                                 </thead>
                                                 <tbody>
                                                 <tr>
-                                                    <td>架构师资质认证</td>
-                                                    <td>
-                                                        HSBC Arch Career Framework <a href="#" data-toggle="modal" data-target="#modalFramework">详情</a>
-                                                    </td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalA1">架构师资质认证</a></td>
                                                 </tr>
 
                                                 <tr>
-                                                    <td>架构师培养计划</td>
-                                                    <td>与HSBC一起制定架构师培养计划</td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalA2">架构师培养计划</a></td>
+
                                                 </tr>
                                                 <tr>
-                                                    <td>架构师培训课程</td>
-                                                    <td>能力中心和HSBC提供的架构师培训课程</td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalA3">架构师培训课程</a></td>
                                                 </tr>
                                                 <tr>
-                                                    <td>架构师评估体系</td>
-                                                    <td>根据积分平衡体系对架构师进行评估</td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalA4">架构师评估体系</a></td>
+
                                                 </tr>
                                                 </tbody>
                                             </table>
@@ -594,7 +589,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="trainingHeading4">
                                     <h4 class="panel-title">
@@ -610,39 +604,29 @@
                                                 <caption></caption>
                                                 <thead>
                                                 <tr>
-
                                                     <th>服务项</th>
-                                                    <th>内容</th>
-
                                                 </thead>
                                                 <tbody>
                                                 <tr>
-                                                    <td>架构评审</td>
-                                                    <td>组织架构师团队和专家对架构进行评审</td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalB1">架构评审</a> - 组织架构师团队和专家对架构进行评审</td>
 
                                                 </tr>
                                                 <tr>
-                                                    <td>架构咨询</td>
-                                                    <td>就某一特定架构问题进行咨询和交流</td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalB2">架构咨询</a> - 就某一特定架构问题进行咨询和交流</td>
+
                                                 </tr>
                                                 <tr>
-                                                    <td>架构研讨和交流</td>
-                                                    <td>参加高端架构论坛和会议</td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalB3">架构研讨和交流</a> - 参加高端架构论坛和会议</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>前沿技术架构赋能</td>
-                                                    <td>根据项目需要，对一些平台技术和架构进行赋能</td>
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalB4">前沿技术架构赋能</a> - 根据项目需要，对一些平台技术和架构进行赋能</td>
                                                 </tr>
-
-
                                                 </tbody>
                                             </table>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
-
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="trainingHeading5">
                                     <h4 class="panel-title">
@@ -658,43 +642,33 @@
                                                 <caption></caption>
                                                 <thead>
                                                 <tr>
-
                                                     <th>服务项</th>
-                                                    <th>内容</th>
                                                 </thead>
                                                 <tbody>
                                                 <tr>
-                                                    <td>聚慧大讲堂</td>
-                                                    <td>分享思想，传播价值。</td>
-
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalC1">聚慧大讲堂</a> - 分享思想，传播价值。</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>技术社区</td>
-                                                    <td>帮助各个交付部进行技术社区建设</td>
-
+                                                    <td><a href="#" data-toggle="modal" data-target="#modalC2">技术社区</a> - 帮助各个交付部进行技术社区建设</td>
                                                 </tr>
-
-
                                                 </tbody>
                                             </table>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
-
 						</div>
-							
+
 					</div>
 				</div>
 			</div>
 		</div>
-        <div class="modal fade" id="modalFramework" tabindex="-1" role="dialog" aria-labelledby="modalFrameworkLabel" aria-hidden="true">
+        <div class="modal fade" id="modalA1" tabindex="-1" role="dialog" aria-labelledby="modalA1Label" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="modalFrameworkLabel">HSBC Arch Career Framework</h4>
+                        <h4 class="modal-title" id="modalA1Label">HSBC Arch Career Framework</h4>
                     </div>
                     <div class="modal-body">
                         <h3>HSBC Arch Career Framework</h3>
@@ -760,7 +734,78 @@
                 </div><!-- /.modal-content -->
             </div><!-- /.modal -->
         </div>
-		<!-- JavaScript files placed at the end of the document so the pages load faster
+        <div class="modal fade" id="modalA2" tabindex="-1" role="dialog" aria-labelledby="modalA2Label" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="modalA2Label">HSBC Arch Career Framework</h4>
+                    </div>
+                    <div class="modal-body">
+                        <h3>HSBC Arch Career Framework</h3>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h3>Research direction</h3>
+                                <ul>
+                                    <li><h5>Enterprise Architects</h5>
+                                        create target state architectures and roadmaps aligned with business and technology strategy
+                                        Enterprise Architects integrate expertise across the full range of more specific architecture disciplines
+                                    </li>
+                                    <li><h5>Business Architects</h5>
+                                        model target state organisation of business capabilities, services, functions, processes and information
+                                    </li>
+                                    <li><h5>Data Architects </h5>
+                                        perform data modelling, comprising data definition, structure, flow and semantics
+                                    </li>
+                                    <li><h5>Solution Architects</h5>
+                                        own the architectural design of end-to-end IT solutions to meet business requirements
+                                    </li>
+                                    <li><h5>Security Architects</h5>
+                                        create security patterns and security solution architectures aligned to Group standards
+                                    </li>
+                                    <li><h5>Technical (Infrastructure, Domain or Application) Architects</h5>
+                                        provide architectural direction and solutions to technical platforms, services, patterns and key application components
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <h3>Architect level</h3>
+                                <ol>
+                                    <li><h5>Associate Architect</h5>
+                                        <p>Indicative GCB Band range:GCB 4-6</p>
+                                        <p>GLT Equivalent: No equivalent position in GLT</p>
+                                    </li>
+                                    <li><h5>Architect</h5>
+                                        <p>Indicative GCB Band range: GCB 4-5</p>
+                                        <p>GLT Equivalent: GLT Consultant Specialist</p>
+                                    </li>
+                                    <li><h5>Lead Architect</h5>
+                                        <p>Indicative GCB Band range: GCB 4-5</p>
+                                        <p>GLT Equivalent: GLT Senior  Consultant Specialist</p>
+                                    </li>
+                                    <li><h5>Principal Architect</h5>
+                                        <p>Indicative GCB Band range: GCB 3-4</p>
+                                        <p>GLT Equivalent: GLT Lead Consultant Specialist</p>
+                                    </li>
+                                    <li><h5>Head of Architecture</h5>
+                                        <p>Indicative GCB Band range: GCB 2-3</p>
+                                        <p>GLT Equivalent: No equivalent position in GLT</p>
+                                    </li>
+                                </ol>
+
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
+        </div>
+        <!-- JavaScript files placed at the end of the document so the pages load faster
 		<!--网站流量统计-->
         <script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
         <noscript>
