--- a/src/main/webapp/service4.html
+++ b/src/main/webapp/service4.html
@@ -910,6 +910,7 @@
             </a>
         </noscript>
         <script language="javascript" type="text/javascript" src="http://quote.51.la/?id=19148250&amp;mb=3"></script>
+        <script language="javascript" type="text/javascript" src="//quote.users.51.la/?id=19148250&amp;mb=%24TLV%7Caj%7C%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la"></script>
         <!--网站流量统计结束
 		================================================== -->
 		<!-- Jquery and Bootstap core js files -->
