添加质量服务目录

--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -100,14 +100,14 @@
 											class="nav navbar-nav navbar-right">
 											<li><a href="index.html">主页</a></li>
 											<li><a>|</a></li>
-											<li class="active"><a href="#a1">业务渠道</a></li>
-											<li><a href="#a2">技术架构渠道</a></li>
-											<li><a href="#a3">技术渠道</a></li>
-											<li><a href="#a4">管理渠道</a></li>
+											<li class="active"><a href="#a1">业务</a></li>
+											<li><a href="#a2">技术架构</a></li>
+											<li><a href="#a3">技术</a></li>
+											<li><a href="#a4">管理</a></li>
 											<li><a href="#a5">国际化赋能</a></li>
-											<li><a href="#a6">测试渠道</a></li>
-											<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li><li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-											<li><a href="#a7">敏捷渠道</a></li>
+											<li><a href="#a6">测试</a></li>
+											<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li><li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>-->
+											<li><a href="#a7">敏捷</a></li>
 										</ul>
 									</div>
 
