update weixin banking by Fred

--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -843,7 +843,7 @@
 													<tr>
 														<td><a><span>网银</span></a></td>
 														<td><a><span>Tablet</span></a></td>
-														<td><a><span>微信银行</span></a></td>
+														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%9E%B6%E6%9E%84%E6%B8%A0%E9%81%93:1.%E6%B8%A0%E9%81%93:%E5%BE%AE%E4%BF%A1%E9%93%B6%E8%A1%8C:%E9%A6%96%E9%A1%B5"><span>微信银行</span></a></td>
 
 													</tr>
 													<tr>
