--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -340,7 +340,7 @@
 											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E4%B8%9A%E5%8A%A1%E6%B8%A0%E9%81%93:1.rbwm:%E6%88%BF%E8%B4%B7:%E9%A6%96%E9%A1%B5" target="_blank">1. 房贷业务</a>
 										</div>
 										<div class="col-md-4">
-											<a href="" target="_blank">2. 微信银行 </a>
+											<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%9E%B6%E6%9E%84%E6%B8%A0%E9%81%93:1.%E6%B8%A0%E9%81%93:%E5%BE%AE%E4%BF%A1%E9%93%B6%E8%A1%8C:%E9%A6%96%E9%A1%B5" target="_blank">2. 微信银行 </a>
 										</div>
 										<div class="col-md-4">
 											<a href="" target="_blank">3. VTM</a>
