添加质量服务目录

--- a/src/main/webapp/service6.html
+++ b/src/main/webapp/service6.html
@@ -106,6 +106,7 @@
 												<li class="active"><a href="service6.html">管理</a></li>
 												<li><a href="service7.html">售前</a></li>
 												<li><a href="service8.html">国际化</a></li>
+												<li><a href="service9.html">质量</a></li>
 											</ul>
 										</div>
 
