--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -101,7 +101,7 @@
 										id="navbar-collapse-1">
 										<ul class="nav navbar-nav navbar-right">
 											<li><a href="index.html">主页</a></li>
-											<li><a href="service.html">培训</a></li>
+
 											<li><a href="">|</a></li>
 											<li><a href="service1.html">技术</a></li>
 											<li><a href="service2.html">业务</a></li>
@@ -111,6 +111,7 @@
 											<li><a href="service6.html">管理</a></li>
 											<li class="active"><a href="service7.html">售前</a></li>
 											<li><a href="service8.html">国际化</a></li>
+											<li><a href="service9.html">质量</a></li>
 										</ul>
 									</div>
 
