add selenum url

--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -532,15 +532,13 @@
 
 													</tr>
 													<tr>
-														<td><a><span>编程基础知识</span></a></td>
+														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E8%87%AA%E5%8A%A8%E5%8C%96%E6%B5%8B%E8%AF%95:%E7%BC%96%E7%A8%8B%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86"><span>编程基础知识</span></a></td>
 
 													</tr>
 													<tr>
-														<td><a><span>Selenium基础</span></a></td>
+														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E8%87%AA%E5%8A%A8%E5%8C%96%E6%B5%8B%E8%AF%95:selenium%E8%87%AA%E5%8A%A8%E5%8C%96"><span>Selenium基础</span></a></td>
 													</tr>
-													<tr>
-														<td><a><span>对象的识别和定位</span></a></td>
-													</tr>
+													
 													<tr>
 														<td><a><span>自动化框架的介绍</span></a></td>
 													</tr>
