add OBS traning

--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -875,6 +875,57 @@
 														<td></td>
 													</tr>
 
+													<tr>
+														<td>RDz</td>
+														<td>张文宇(Wellry Zhang)</td>
+														<td>OBS</td>
+														<td>1个小时</td>
+														<td></td>
+													</tr>
+
+													<tr>
+														<td>Endevor/CAV/FM</td>
+														<td>赖志华(Andy Lai)</td>
+														<td>OBS</td>
+														<td>1个小时</td>
+														<td></td>
+													</tr>
+													<tr>
+														<td>C:D</td>
+														<td>吕双鹏(Steph Lv）</td>
+														<td>OBS</td>
+														<td>1个小时</td>
+														<td></td>
+													</tr>
+													<tr>
+														<td>CO</td>
+														<td>王兆亢(Kenny Wang)</td>
+														<td>OBS</td>
+														<td>1个小时</td>
+														<td></td>
+													</tr>
+													<tr>
+														<td>TWS</td>
+														<td>王晓娟(Betty Wang)</td>
+														<td>OBS</td>
+														<td>1个小时</td>
+														<td></td>
+													</tr>
+													<tr>
+														<td>JIRA</td>
+														<td>屈建华(Hope Qu）</td>
+														<td>OBS</td>
+														<td>1个小时</td>
+														<td></td>
+													</tr>
+													<tr>
+														<td>GSI/R2ds</td>
+														<td>郭雯(Vivian Guo)</td>
+														<td>OBS</td>
+														<td>1个小时</td>
+														<td></td>
+													</tr>
+
 												</tbody>
 											</table>
 										</div>
@@ -1023,6 +1074,103 @@
 														<td>1)单元测试房方法</br> 2)插桩技术
 														</td>
 													</tr>
+												</tbody>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="trainingHeading8">
+									<h4 class="panel-title">
+										<a class="collapsed" data-toggle="collapse"
+										   data-parent="#trainingAccordion" href="#trainingCollapse8"
+										   aria-expanded="false" aria-controls="trainingCollapse8">
+											MF Tech</a>
+									</h4>
+								</div>
+								<div id="trainingCollapse8" class="panel-collapse collapse"
+									 role="tabpanel" aria-labelledby="trainingHeading8">
+									<div class="panel-body">
+										<div class="table-responsive">
+											<table class="table">
+												<caption></caption>
+												<thead>
+												<tr>
+
+													<th>课程名称</th>
+													<th>培训讲师</th>
+													<th>提供交付部</th>
+													<th>课程时长</th>
+													<th>内容简介</th>
+												</thead>
+												<tbody>
+												<tr>
+													<td>JCL refresh</td>
+													<td>方滨长(Borg Fang)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+
+												<tr>
+													<td>JCL advanced</td>
+
+													<td>董鹏岗(Penn Dong)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>COBOL refresh</td>
+													<td>祁瑞锋(Rifling Qi)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>COBOL advanced</td>
+													<td>严锡锋(Austin Yan)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>DB2 refresh</td>
+													<td>余志浩(Bruce Yu)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>DB2 advanced</td>
+													<td>史绪成(Harry Shi)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>CICS refresh</td>
+													<td>张文宇(Wellry Zhang)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>CICS advanced</td>
+													<td>王文超(Windy Wang)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Q/VSAM</td>
+													<td>方滨长(Borg Fang)</td>
+													<td>OBS</td>
+													<td>1个小时</td>
+													<td></td>
+												</tr>
+
 												</tbody>
 											</table>
 										</div>
