--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,12 +108,12 @@
                                         <!-- <li><a href="#portfolio">Portfolio</a></li> -->
 
 
-                                        <li><a href="../SpiderNet/service/manage/loginPage.html">SpiderNet</a></li>
+                                        <li><a href="../SpiderNet/service/manage/loginPage.html">P-SN</a></li>
                                         <li><a href="http://xa.chinasoftosg.com/lms/login.html">技能鉴定</a></li>
 
 
                                         <li><a href="knowledge.html">知识库</a></li>
-                                        <li><a href="#about">关于</a></li>
+                                        <li><a href="../SpiderNet/service/login.html">P-VBS</a></li>
                                     </ul>
                                 </div>
 
