--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,7 +113,7 @@
 
 
                                         <li><a href="knowledge.html">知识库</a></li>
-                                        <li><a href="../SpiderNet/service/login.html">P-VBS</a></li>
+                                        <li><a href="../p-vbs/login.html">P-VBS</a></li>
                                     </ul>
                                 </div>
 
