--- a/src/main/webapp/service6.html
+++ b/src/main/webapp/service6.html
@@ -397,6 +397,14 @@
 
 												</tr>
 												
+												</tr>
+													<tr>
+													<td>
+													<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:%E5%91%98%E5%B7%A5%E8%BD%AF%E6%8A%80%E8%83%BD%E5%9F%B9%E8%AE%AD" target="_blank">员工软技能培训</a>
+													</td>
+
+												</tr>
+												
 												<tr>
 												</tbody>
 											</table>
