--- a/src/main/webapp/service3.html
+++ b/src/main/webapp/service3.html
@@ -747,7 +747,7 @@
 													<td></td>
 												</tr>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:jekins">Jekins</a></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E6%95%8F%E6%8D%B7:jekins">Jenkins</a></td>
 													<td></td>
 													<td></td>
 													<td></td>
