--- a/src/main/webapp/service6.html
+++ b/src/main/webapp/service6.html
@@ -348,6 +348,7 @@
 													</td>
 
 												</tr>
+												
 												</tbody>
 											</table>
 										</div>
@@ -442,6 +443,11 @@
 												</tr>
 												
 												<tr>
+													<td>
+													<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E5%94%AE%E5%89%8D:%E6%8B%9B%E6%8A%95%E6%A0%87:%E9%A6%96%E9%A1%B5" target="_blank">招投标管理</a>
+													</td>
+
+												</tr>
 												</tbody>
 											</table>
 										</div>
