--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -199,6 +199,10 @@
 														<td><a
 															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E8%BF%90%E8%90%A5%E7%AE%A1%E7%90%86:5.%E7%AE%A1%E7%90%86%E6%8A%A5%E8%A1%A8%E6%A6%82%E8%BF%B0"><span>管理报表概述</span></a></td>
 													</tr>
+													<tr>
+														<td><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E8%83%BD%E5%8A%9B%E4%B8%AD%E5%BF%83:%E5%94%AE%E5%89%8D:%E6%8B%9B%E6%8A%95%E6%A0%87:%E9%A6%96%E9%A1%B5"><span>HSBC招投标管理</span></a></td>
+													</tr>
 
 												</tbody>
 											</table>
@@ -958,11 +962,13 @@
 															width="170" height="70" border="边框"></a>
 													</div>
 													<div class="col-md-2">
-														<a target="_blank"><img src="images\12.png"
+														<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:%E5%9F%BA%E7%A1%80%E6%8A%80%E6%9C%AF:%E5%89%8D%E7%AB%AF:html:%E9%A6%96%E9%A1%B5"
+														target="_blank"><img src="images\12.png"
 															width="170" height="70" border="边框"></a>
 													</div>
 													<div class="col-md-2">
-														<a target="_blank"><img src="images\13.png"
+														<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:%E5%9F%BA%E7%A1%80%E6%8A%80%E6%9C%AF:%E5%89%8D%E7%AB%AF:css:%E9%A6%96%E9%A1%B5"
+														target="_blank"><img src="images\13.png"
 															width="170" height="70" border="边框"></a>
 
 													</div>
@@ -974,8 +980,8 @@
 
 													</div>
 													<div class="col-md-2">
-
-														<a target="_blank"><img src="images\15.png"
+														<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:spring:%E9%A6%96%E9%A1%B5"
+														target="_blank"><img src="images\15.png"
 															width="170" height="70" border="边框"></a>
 
 
@@ -1005,6 +1011,19 @@
 														<a target="_blank"><img src="images\110.png"
 															width="170" height="70" border="边框"></a>
 
+													</div>
+
+													<div class="col-md-2">
+														<a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:mulesoft:%E7%9B%AE%E5%BD%95"
+															target="_blank"><img src="images\mulesoft.jpg"
+															width="170" height="70" border="边框"></a>
+													</div>
+													
+													<div class="col-md-2">
+														<a
+														target="_blank"><img src="images\angularjs.jpg" 
+														width="170" height="70" border="边框"></a>
 													</div>
 
 
