add training page and englishTraining url

--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -94,6 +94,7 @@
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">主页</a></li>
 												<li class="active"><a href="#new">最新活动</a></li>
+												<li><a href="training.html">最新培训</a></li>
 											</ul>
 										</div>
 
