新增质量月刊9篇文章

--- a/src/main/webapp/service9.html
+++ b/src/main/webapp/service9.html
@@ -678,16 +678,51 @@
 												</tr>
 
 												<tr>
-													<td></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:%E9%A6%96%E9%A1%B5">2017年8月红事件DNA展播</a></td>
 													<td></td>
 													<td></td>
 													
 												</tr>
 												<tr>
-													<td></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:aar%E6%B4%BB%E5%8A%A8%E4%BB%8B%E7%BB%8D">AAR引导员认证活动介绍</a></td>
 													<td></td>
 													<td></td>
 													
+												</tr>
+												<tr>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:pareto_analysis">质量管理方法（帕累托）介绍</a></td>
+													<td></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:%E4%BC%98%E7%A7%80%E5%91%98%E5%B7%A5%E8%A1%A8%E5%BD%B0">优秀员工表彰</a></td>
+													<td></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:pm%E5%BF%83%E5%BE%97%E9%AB%98%E9%A3%8E%E5%88%9A">项目管理培训心得-高风刚</a></td>
+													<td></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:pm%E5%BF%83%E5%BE%97%E5%BC%A0%E7%92%90">PM专项培训心得体会与总结-张璐</a></td>
+													<td></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:pm%E5%BF%83%E5%BE%97%E5%8F%B2%E5%B0%91%E9%B9%8F">质量管理培训心得-史少鹏</a></td>
+													<td></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:pm%E5%BF%83%E5%BE%97%E5%91%A8%E6%B0%B8%E6%98%A5">做时间的朋友-周永春</a></td>
+													<td></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td></td>
+													<td></td>
+													<td></td>
 												</tr>
 												</tbody>
 											</table>
