质量能力提升增加“质量应知应会”

--- a/src/main/webapp/service9.html
+++ b/src/main/webapp/service9.html
@@ -680,7 +680,7 @@
 												<tr>
 													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E6%9C%88%E5%88%8A:%E9%A6%96%E9%A1%B5">2017年8月红事件DNA展播</a></td>
 													<td></td>
-													<td></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:%E8%B4%A8%E9%87%8F%E8%83%BD%E5%8A%9B%E6%8F%90%E5%8D%87:%E8%B4%A8%E9%87%8F%E5%BA%94%E7%9F%A5%E5%BA%94%E4%BC%9A">质量应知应会</a></td>
 													
 												</tr>
 												<tr>
